[gd_scene load_steps=26 format=3 uid="uid://ke36y4hnpwk2"]

[ext_resource type="Script" path="res://player.gd" id="1_b3vg5"]
[ext_resource type="Texture2D" uid="uid://cxynmsoo2fuih" path="res://walkright-Sheet.png" id="2_2ood2"]
[ext_resource type="Texture2D" uid="uid://dsmllrp32h6ki" path="res://alongSheet.png" id="2_7dmgq"]
[ext_resource type="Texture2D" uid="uid://bxsgiyghlsmso" path="res://staySheet.png" id="3_d5i1l"]
[ext_resource type="Texture2D" uid="uid://cybb8ao837nfy" path="res://downSheet.png" id="4_oo8v1"]
[ext_resource type="Script" path="res://sword.gd" id="6_6txlg"]
[ext_resource type="Texture2D" uid="uid://buh8hoi50qxmq" path="res://BlueSword.png" id="6_rqqln"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x3bxq"]
atlas = ExtResource("2_7dmgq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmi7m"]
atlas = ExtResource("2_7dmgq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r367i"]
atlas = ExtResource("2_7dmgq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mq4wq"]
atlas = ExtResource("2_2ood2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hkw2"]
atlas = ExtResource("2_2ood2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjt4b"]
atlas = ExtResource("2_2ood2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lq0j"]
atlas = ExtResource("3_d5i1l")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aeeae"]
atlas = ExtResource("3_d5i1l")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku4ne"]
atlas = ExtResource("4_oo8v1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e70yx"]
atlas = ExtResource("4_oo8v1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r24rv"]
atlas = ExtResource("4_oo8v1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5pd80"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3bxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmi7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r367i")
}],
"loop": true,
"name": &"down",

[gd_scene load_steps=24 format=3 uid="uid://mrd02wmp5bsa"]

[ext_resource type="Script" path="res://player.gd" id="1_nnwnc"]
[ext_resource type="Texture2D" uid="uid://u7a2qo3yi0sq" path="res://Tiny Wonder Forest 1.0/characters/main character/walk and idle.png" id="3_lkvw3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_onlx0"]
atlas = ExtResource("3_lkvw3")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_00hsq"]
atlas = ExtResource("3_lkvw3")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv3po"]
atlas = ExtResource("3_lkvw3")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu8ll"]
atlas = ExtResource("3_lkvw3")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_njeko"]
atlas = ExtResource("3_lkvw3")
region = Rect2(96, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx5co"]
atlas = ExtResource("3_lkvw3")
region = Rect2(120, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm6e1"]
atlas = ExtResource("3_lkvw3")
region = Rect2(144, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_skg1t"]
atlas = ExtResource("3_lkvw3")
region = Rect2(168, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8rba"]
atlas = ExtResource("3_lkvw3")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jw16"]
atlas = ExtResource("3_lkvw3")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_swalo"]
atlas = ExtResource("3_lkvw3")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lagl"]
atlas = ExtResource("3_lkvw3")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_km7tb"]
atlas = ExtResource("3_lkvw3")
region = Rect2(96, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6cwx"]
atlas = ExtResource("3_lkvw3")
region = Rect2(120, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lqxw"]
atlas = ExtResource("3_lkvw3")
region = Rect2(144, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qduuw"]
atlas = ExtResource("3_lkvw3")
region = Rect2(168, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_egoeh"]
atlas = ExtResource("3_lkvw3")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4efqd"]
atlas = ExtResource("3_lkvw3")
region = Rect2(24, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_2gwuj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onlx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00hsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv3po")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu8ll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njeko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rx5co")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm6e1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skg1t")
}],
"loop": true,
"name": &"going_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mq4wq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hkw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjt4b")
}],
"loop": true,
"name": &"going",
"texture": SubResource("AtlasTexture_o8rba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jw16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swalo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lagl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km7tb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6cwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lqxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qduuw")
}],
"loop": true,
"name": &"going_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lq0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egoeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4efqd")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku4ne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e70yx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r24rv")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4c21c"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8afus"]
radius = 15.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_22av7"]
size = Vector2(6.5, 3)

[sub_resource type="Animation" id="Animation_wxjlo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.151844]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ay8ct"]
resource_name = "sword"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 4), Vector2(2, 4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.43),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bb4q3"]
_data = {
"RESET": SubResource("Animation_wxjlo"),
"sword": SubResource("Animation_ay8ct")
}

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_b3vg5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.5, 0)
scale = Vector2(0.59375, 0.59375)
sprite_frames = SubResource("SpriteFrames_5pd80")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 3
visibility_layer = 3
shape = SubResource("CircleShape2D_4c21c")

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_8afus")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -6.0
offset_top = 11.0
offset_right = 19.0
offset_bottom = 15.0
scale = Vector2(0.5, 0.5)
show_percentage = false

[node name="Timer" type="Timer" parent="."]

[node name="attack_cooldown" type="Timer" parent="."]

[node name="deal_attack_timer" type="Timer" parent="."]

[node name="sword" type="Area2D" parent="."]
show_behind_parent = true
position = Vector2(1, 4)
rotation = -0.151844
script = ExtResource("6_6txlg")

[node name="Sprite2D" type="Sprite2D" parent="sword"]
position = Vector2(8.82875, 1)
rotation = 1.5708
scale = Vector2(0.0999999, 0.111597)
texture = ExtResource("6_rqqln")

[node name="CollisionShape2D" type="CollisionShape2D" parent="sword"]
visible = false
position = Vector2(9, 1)
shape = SubResource("RectangleShape2D_22av7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="sword"]
libraries = {
"": SubResource("AnimationLibrary_bb4q3")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, 0)
zoom = Vector2(4, 4)

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g7ph1"]
size = Vector2(8, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oh0uh"]
size = Vector2(13, 19)

[node name="Player" type="CharacterBody2D"]
position = Vector2(662, 442)
script = ExtResource("1_nnwnc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2gwuj")
animation = &"going_right"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 1)
rotation = 3.14159
scale = Vector2(1.04704, 0.636042)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_g7ph1")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_oh0uh")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]